fixed fonts styles and aligned elements (#1042)

--- a/src/app/main/component/eco-news/components/news-list/news-list-list-view/news-list-list-view.component.scss
+++ b/src/app/main/component/eco-news/components/news-list/news-list-list-view/news-list-list-view.component.scss
@@ -42,13 +42,12 @@ div {
 }
 
 .eco-news_list-content-title {
-  font-family: var(--secondary-font);
-  font-style: normal;
-  font-weight: 500;
-  font-size: 21px;
-  line-height: 26px;
+  font-family: var(--primary-font);
+  color: var(--quaternary-dark-grey);
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 28px;
   margin-bottom: 5px;
-  color: var(--secondary-dark-grey);
   overflow: hidden;
   word-break: break-all;
 }
